# fabula-charsheet

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
fabula_charsheet/: config.py  en.yaml  main.py
fabula_charsheet/assets/: heroic_skills.yaml
fabula_charsheet/assets/classes/: arcanist.yaml  chimerist.yaml  dancer.yaml  dark_blade.yaml  elementalist.yaml  entropist.yaml  fury.yaml  guardian.yaml  loremaster.yaml  mutant.yaml  orator.yaml  rogue.yaml  sharpshooter.yaml  spiritist.yaml  tinkerer.yaml  wayfarer.yaml  weaponmaster.yaml
fabula_charsheet/assets/equipment/: armors.yaml  shields.yaml  weapons.yaml
fabula_charsheet/assets/locals/: en.yaml
fabula_charsheet/assets/qualities/: accessories.yaml  armors.yaml  common.yaml  weapons.yaml
fabula_charsheet/assets/skills/: heroic_skills.yaml
fabula_charsheet/characters/: test_char.yaml
fabula_charsheet/data/: __init__.py  compendium.py  localizator.py  saved_characters.py
fabula_charsheet/pages/: __init__.py  controller.py  error.py
fu_charsheet/: config.py  main.py
fu_charsheet/data/: compendium.py  saved_characters.py
fu_charsheet/pages/: controller.py
tests/: conftest.py  test_char_class.py  test_character.py  test_compendium.py  test_controller_companion.py  test_controller_defense.py  test_controller_equipment.py  test_controller_persistence.py  test_controller_progression.py  test_controller_resources.py  test_controller_resting.py  test_controller_spells.py  test_controller_status.py  test_controller_therioforms.py  test_localizator.py  test_saved_characters.py
(+172 files in other folders)
